; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_status.c_thread_set_child.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_status.c_thread_set_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arm_saved_state = type { i64* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @thread_set_child(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.arm_saved_state*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.arm_saved_state* @get_user_regs(i32 %6)
  store %struct.arm_saved_state* %7, %struct.arm_saved_state** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = load %struct.arm_saved_state*, %struct.arm_saved_state** %5, align 8
  %11 = getelementptr inbounds %struct.arm_saved_state, %struct.arm_saved_state* %10, i32 0, i32 0
  %12 = load i64*, i64** %11, align 8
  %13 = getelementptr inbounds i64, i64* %12, i64 0
  store i64 %9, i64* %13, align 8
  %14 = load %struct.arm_saved_state*, %struct.arm_saved_state** %5, align 8
  %15 = getelementptr inbounds %struct.arm_saved_state, %struct.arm_saved_state* %14, i32 0, i32 0
  %16 = load i64*, i64** %15, align 8
  %17 = getelementptr inbounds i64, i64* %16, i64 1
  store i64 1, i64* %17, align 8
  ret void
}

declare dso_local %struct.arm_saved_state* @get_user_regs(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
